<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="tab_names">
        <item>@string/main</item>
        <item>@string/sessions</item>
        <item>@string/graph</item>
        <item>@string/summary</item>
    </string-array>

    <string name="main">Main</string>
    <string name="sessions">Sessions</string>
    <string name="graph">Graph</string>
    <string name="summary">Summary</string>

    <string name="app_name" translatable="false">Poker Trax</string>
    <string name="app_subtitle">live poker tool</string>
    <string name="action_settings">Settings</string>
    <string name="addButtonText">Add new session</string>
    <string name="resultsButtonText">Results</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <string name="locationDialogText">New place</string>
    <string name="gameTypeDialogTitle">New game type (ex No Limit, Omaha)</string>
    <string name="ok">OK</string>
    <string name="summary_profit">Profit</string>
    <string name="summary_total">Total</string>
    <string name="dash">-</string>
    <string name="result_list_column_0">Blinds</string>
    <string name="result_list_column_2">Time</string>
    <string name="result_list_column_3">Profit</string>
    <string name="graph_title">Last sessions (max 20)</string>
    <string name="total_time_played">Total time played</string>
    <string name="location">Place</string>
    <string name="game_structure_dialog_title">New game structure</string>
    <string name="small_blind">Small blind</string>
    <string name="big_blind">Big blind</string>
    <string name="ante">Ante</string>
    <string name="total_profit_per_hour">Total profit/hour</string>
    <string name="game_type">Game type</string>
    <string name="blinds">Blinds</string>
    <string name="profit">Profit</string>
    <string name="date">Date</string>
    <string name="play_time">Play time</string>
    <string name="discard">discard</string>
    <string name="default_result" translatable="false">0</string>
    <string name="avgbbperhour">Average bb/h</string>
    <string name="buypremium">Buy premium</string>
    <string name="premium">Premium</string>
    <string name="menu_settings">Sessions</string>
    <string name="menu_search">Graph</string>
    <string name="dummy" translatable="false">DUMMY</string>
    <string name="select_time_played">Select time played</string>
    <string name="menu_navigation">menu_navigation</string>
</resources>
