<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_premium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="end"
        android:text="@string/premium"/>
    <Button
        android:id="@+id/button_add"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:text="@string/addButtonText"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        style="@style/MyButtonStyle"
        android:onClick="addSessionOnClick"/>

    <Button
        android:id="@+id/buy_premium"
        android:layout_below="@+id/button_add"
        android:layout_marginTop="30dp"
        android:text="@string/buypremium"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        style="@style/MyButtonStyle"
        android:onClick="buyPremium"/>

</RelativeLayout>
